--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -11,8 +11,9 @@
 	<path id="testsuite_ui.classpath">
 		<pathelement location="bin" />
 		<path refid="core.classpath" />
-		<pathelement location="./swt.jar" />
-		<pathelement location="./org.swtchart_0.7.0.v20110128.jar" />
+		<pathelement location="./libs/swt.jar" />
+		<pathelement location="./libs/org.swtchart_0.7.0.v20110128.jar" />
+		<pathelement location="${core.location}/libs/simple-xml-2.6.4.jar" />
 	</path>
 	<target name="init">
 		<mkdir dir="bin" />
@@ -49,7 +50,7 @@
 				<pathelement location="testsuite-core.jar" />
 			</classpath>
 		</manifestclasspath>
-		<jar jarfile="testsuite_ui.jar" destfile="testsuite_ui.jar">
+		<jar jarfile="testsuite_ui.jar" destfile="../testsuite_ui.jar">
 			<manifest>
 				<attribute name="Main-Class" value="org.sbml.testsuite.ui.Program" />
 				<attribute name="Class-Path" value="${manifest.cp}" />
