phantomjs is the most painfully slow program ever.  And it's not necessary for generating JPEGs, since we can convert the PNGs to JPEGs directly using an image conversion program like ImageMagick's 'convert'.  So that's what we do now.  It's about 100000x faster too.

--- a/trunk/test-suite/Makefile
+++ b/trunk/test-suite/Makefile
@@ -70,9 +70,9 @@ cases/semantic/%-plot.png: cases/semantic/%-plot.html \
 		./src/utilities/rasterize/rasterize.js
 	phantomjs ./src/utilities/rasterize/rasterize.js $(patsubst %-plot.png,%-plot.html,$@) $@
 
-cases/semantic/%-plot.jpg: cases/semantic/%-plot.html \
+cases/semantic/%-plot.jpg: cases/semantic/%-plot.html cases/semantic/%-plot.png \
 		./src/utilities/rasterize/rasterize.js
-	phantomjs ./src/utilities/rasterize/rasterize.js $(patsubst %-plot.jpg,%-plot.html,$@) $@
+	convert -quality 90 $(patsubst %-plot.jpg,%-plot.png,$@) $@
 
 plots: html-plots jpg-plots
 
