Removed some poorly-thought-through dependencies.

--- a/trunk/test-suite/Makefile
+++ b/trunk/test-suite/Makefile
@@ -62,16 +62,13 @@ cases-html-plot-files = $(patsubst %-results.csv,%-plot.html,$(cases-csv-files))
 cases-png-plot-files  = $(patsubst %-results.csv,%-plot.png,$(cases-csv-files))
 cases-jpg-plot-files  = $(patsubst %-results.csv,%-plot.jpg,$(cases-csv-files))
 
-cases/semantic/%-plot.html: cases/semantic/%-results.csv \
-		./src/utilities/plotresults/plotresults.sh
+cases/semantic/%-plot.html: cases/semantic/%-results.csv
 	./src/utilities/plotresults/plotresults.py -n -q -d $(patsubst %-plot.html,%-results.csv,$@) -o $@
 
-cases/semantic/%-plot.png: cases/semantic/%-plot.html \
-		./src/utilities/rasterize/rasterize.js
+cases/semantic/%-plot.png: cases/semantic/%-plot.html
 	phantomjs ./src/utilities/rasterize/rasterize.js $(patsubst %-plot.png,%-plot.html,$@) $@
 
-cases/semantic/%-plot.jpg: cases/semantic/%-plot.html cases/semantic/%-plot.png \
-		./src/utilities/rasterize/rasterize.js
+cases/semantic/%-plot.jpg: cases/semantic/%-plot.html cases/semantic/%-plot.png
 	convert -quality 90 $(patsubst %-plot.jpg,%-plot.png,$@) $@
 
 plots: html-plots jpg-plots
