--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/.classpath
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/.classpath
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="data/*" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/testsuite-core"/>
+	<classpathentry kind="lib" path="libs/swt-osx-64.jar"/>
 	<classpathentry kind="lib" path="libs/org.swtchart_0.7.0.v20110128.jar"/>
-	<classpathentry kind="lib" path="libs/swt.jar"/>
+	<classpathentry kind="lib" path="libs/opal-0.9.5.1.jar"/>
+	<classpathentry kind="lib" path="libs/swing2swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
