--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/.project
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/.project
@@ -3,6 +3,7 @@
 	<name>testsuite-ui</name>
 	<comment></comment>
 	<projects>
+		<project>testsuite-core</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -10,8 +11,29 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>full,incremental,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/STS_UI_jar_builder.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1358876487398</id>
+			<name></name>
+			<type>22</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*~</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
