--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/Info.plist
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>SBML Testsuite</string>
+	<string>SBML Test Runner</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.sbml.testsuite.ui.Program</string>
 	<key>CFBundleVersion</key>
@@ -34,7 +34,8 @@
 		<array>
 			<string>$JAVAROOT/testsuite-core.jar</string>
 			<string>$JAVAROOT/swt.jar</string>
-			<string>$JAVAROOT/testsuite_ui.jar</string>
+			<string>$JAVAROOT/testsuite-ui.jar</string>
+			<string>$JAVAROOT/opal-0.9.5.1.jar</string>
 			<string>$JAVAROOT/simple-xml-2.6.4.jar</string>
 			<string>$JAVAROOT/org.swtchart_0.7.0.v20110128.jar</string>
 		</array>
