--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -52,6 +52,7 @@
 	<target name="jar" depends="build">
 		<manifestclasspath property="manifest.cp" jarfile="testsuite-ui.jar">
 			<classpath>
+				<pathelement location="opal-0.9.5.1.jar" />
 				<pathelement location="swt.jar" />
 				<pathelement location="org.swtchart_0.7.0.v20110128.jar" />
 				<pathelement location="testsuite-core.jar" />
